fix(fish): 钓鱼工具适配 1.20.1——mixin 降至 JAVA_17 并补 Forge/Fabric 的 refmap 基建,Math.clamp 改写为 Java 17 等价写法